@@ -6,6 +6,6 @@ import org.springframework.web.bind.annotation.ResponseStatus;
 @ResponseStatus(HttpStatus.NOT_FOUND)
 public class ResourceNotFoundException extends RuntimeException {
     public ResourceNotFoundException(String resourceName, Long id) {
-        super(String.format("%s con id %d no encontrado", resourceName, id));
+        super("%s con id %d no encontrado".formatted(resourceName, id));
     }
 }
